fix horizontal scroll of index.html

--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -139,7 +139,7 @@
   }
 
   .how-it-works__list {
-    width: 1270px;
+    width: 1250px;
     flex-wrap: nowrap;
   }
 
@@ -159,5 +159,6 @@
 
   .how-it-works__title {
     margin-left: 85px;
+    width: 450px;
   }
 }
